# makeproto

./: .gitignore  MANIFEST.in  Makefile  obj.proto  pyproject.toml  setup.cfg  tasks.py  teste.proto  user_service.proto
makeproto/: __init__.py  basefield.py  basemessage.py  build_service.py  casing.py  compile_proto.py  compiler.py  compiler_passes.py  convert.py  exceptions.py  format_comment.py  indexer.py  interface.py  make_service_template.py  makeblock.py  makeenum.py  makemsg.py  makemsg2.py  makeservice.py  makeservice2.py  mapclass.py  message.py  models.py  models2.py  package_module.py  protobuilder.py  protobuilder2.py  prototypes.py  prototypes2.py  proxy.py  report.py  reserved.py  spec  template.py  template_models.py  template_render.py  templates.py  templates2.py  tempmodels.py
makeproto/builder/: jinja_templates.py  make_msg.py  msgbuilder.py  protobuilder.py  templates.py  testingo.py
makeproto/protoobj/: base.py  decorators.py  message.py  rules.py  types.py
scripts/: compile_proto.py
tests/: compile_helper.py  conftest.py  test_block_consistency.py  test_chain_dep.py  test_chained.py  test_compile.py  test_convert.py  test_decorator.py  test_full.py  test_full_protofile.py  test_get_type_str.py  test_helpers.py  test_indexer.py  test_make_msg.py  test_make_service.py  test_make_service_template.py  test_makemsg.py  test_makemsg2.py  test_mapclass.py  test_message.py  test_message_oneof.py  test_oneof.py  test_prototypes.py  test_proxy.py  test_report.py  test_service.py  test_service_template.py  test_temp_enum.py  test_templates.py  test_templates_blocks.py  test_templates_fields.py  test_types.py  testingo.py
(+41 files in other folders)
