[project]
name = "makeproto"
version = "0.1.0"
description = ""
authors = [
    { name = "rodbell" }
]
requires-python = ">=3.7"

dependencies = [
    "jinja2>=3.1.6",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12",
    "pytest>=7.0.0",
    "grpcio-tools>=1.73.0",
    "invoke>=2.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true